--- a/example-usage.html
+++ b/example-usage.html
@@ -38,7 +38,8 @@
 	<script type="text/json" id="dialogic-settings">
 		{
 			"modulesImportPath": "/modules",
-			"novaPolozkaNastaveni": "je tu"
+			"novaHodnota": "je tu",
+			"resultSnippetElements": {"innerWrapper": "GGG"}
 		}
 	</script>
 	<script type="module" src="dialogic.mjs?v=0.1" crossorigin="anonymous" data-integrity="sha256-todo"></script>
